erDiagram
    PACIENTES ||--o{ TURNOS : "solicita"
    MEDICOS ||--o{ TURNOS : "atiende"
    TURNOS ||--o{ ESTUDIOS : "genera"
    MEDICOS ||--o{ DISPONIBILIDAD : "define"
    MEDICOS ||--o{ AGENDA : "tiene"
    PACIENTES ||--o{ AGENDA : "reserva"

    PACIENTES {
        int id_paciente PK
        varchar dni
        varchar nombre
        varchar apellido
        varchar email UK
        timestamp fecha_registro
        varchar password
        varchar direccion
        varchar telefono
    }

    MEDICOS {
        int id_medico PK
        varchar nombre
        varchar apellido
        varchar dni
        varchar email
        varchar password
        varchar direccion
        varchar telefono
        timestamp fecha_registro
        varchar especialidad
    }

    TURNOS {
        int id_turno PK
        int id_paciente FK
        int id_medico FK
        varchar establecimiento
        timestamp fecha_creacion
        timestamp fecha_de_turno
    }

    ESTUDIOS {
        int id_estudio PK
        int id_turno FK
        int id_paciente FK
        varchar nombre
        text descripcion
        timestamp fecha_creacion
        timestamp fecha_de_turno
    }

    TESTS {
        int id PK
        varchar nombre
    }

    DISPONIBILIDAD {
        bigint id PK
        bigint medico_id FK
        enum dia
        time hora_inicio
        time hora_fin
        int duracion_turno
    }

    AGENDA {
        bigint id PK
        bigint medico_id FK
        bigint paciente_id FK
        date fecha
        time hora
        boolean disponible
    }
